objects/Case.object
<CustomObject>
    <businessProcesses>
        <fullName>Enterprise Sales</fullName>
        <description>Support Process related to Enterprise Sales i.e. Support from Sales Analyst</description>
        <isActive>true</isActive>
        <values>
            <fullName>Closed Won</fullName>
        </values>
        <values>
            <fullName>New</fullName>
            <default>true</default>
        </values>
        <values>
            <fullName>Open</fullName>
        </values>
        <values>
            <fullName>Revision</fullName>
        </values>
    </businessProcesses>
    <businessProcesses>
        <fullName>REA</fullName>
        <isActive>true</isActive>
        <values>
            <fullName>Closed Lost</fullName>
        </values>
        <values>
            <fullName>Closed Won</fullName>
        </values>
        <values>
            <fullName>New</fullName>
            <default>true</default>
        </values>
        <values>
            <fullName>Not Supporting</fullName>
        </values>
        <values>
            <fullName>On Hold</fullName>
        </values>
        <values>
            <fullName>Open</fullName>
        </values>
    </businessProcesses>
    <fields>
        <fullName>Account_URL__c</fullName>
        <formula>HYPERLINK("https://wework.lightning.force.com/lightning/r/Account/" + AccountId + "/view","Account Link")</formula>
        <label>Account URL</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Actual_Deal_Margin__c</fullName>
        <label>Actual Deal Margin (%)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Actual_EBITDA_Margin__c</fullName>
        <label>Actual Deal EBITDA Margin (%)</label>
        <precision>18</precision>
        <scale>1</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Actual_EBITDA_Margin_with_broker_fee__c</fullName>
        <label>Actual EBITDA Margin w/ Broker Fees (%)</label>
        <precision>18</precision>
        <scale>1</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Actual_Guardrail_Margin__c</fullName>
        <label>Actual Deal Guardrail Margin (%)</label>
        <precision>18</precision>
        <scale>1</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Additional_Details__c</fullName>
        <label>Additional Details</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Asset_Region__c</fullName>
        <label>Asset Region</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>APAC</fullName>
                </value>
                <value>
                    <fullName>EMEA</fullName>
                </value>
                <value>
                    <fullName>LatAm</fullName>
                </value>
                <value>
                    <fullName>NA East</fullName>
                </value>
                <value>
                    <fullName>NA West</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Budget__c</fullName>
        <label>Budget</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Building_Nearest_Address__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Building on related Opportunity</description>
        <label>Building Nearest / Address</label>
        <referenceTo>Building__c</referenceTo>
        <relationshipLabel>Cases</relationshipLabel>
        <relationshipName>Cases</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Building_Status__c</fullName>
        <label>Building Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>WeWork Pipeline</fullName>
                </value>
                <value>
                    <fullName>To Be Sourced</fullName>
                </value>
                <value>
                    <fullName>PxWe</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Building_Tier__c</fullName>
        <label>Building Tier</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>I</fullName>
                </value>
                <value>
                    <fullName>II</fullName>
                </value>
                <value>
                    <fullName>III</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Capex_Payment_Terms__c</fullName>
        <label>Capex Payment Terms</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Upfront</fullName>
                </value>
                <value>
                    <fullName>Amortized</fullName>
                </value>
                <value>
                    <fullName>N/A</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Case_Requester__c</fullName>
        <description>Captures email of Case: Requested By user</description>
        <label>Case Requester</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Case_Template_Name__c</fullName>
        <description>Name of the Task Template from which this Case was created, so trigger can easily identify the Task Template and assign the owner of the Case accordingly.</description>
        <externalId>true</externalId>
        <label>Case Template Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Case_Template__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Case Template from which this Case was created, so trigger can easily identify the Case and assign the owner of the Case accordingly.</description>
        <label>Case Template</label>
        <referenceTo>Case_Template__c</referenceTo>
        <relationshipLabel>Cases</relationshipLabel>
        <relationshipName>Cases</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Cash_Margin__c</fullName>
        <label>Cash Margin (%)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Commitment_Term_from_Model__c</fullName>
        <label>Commitment Term (months)</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Configuration_Fee_USD__c</fullName>
        <label>Configuration Fee (USD)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Configuration_Payment_Terms__c</fullName>
        <label>Configuration Payment Terms</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Upfront</fullName>
                </value>
                <value>
                    <fullName>Amortized</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Configured_Capex_Fee__c</fullName>
        <label>Configured Capex Fee</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Custom_Layout_Required__c</fullName>
        <label>Custom Layout Required</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Customization_Details__c</fullName>
        <label>Customization Details</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Deal_Alpha__c</fullName>
        <label>Deal Alpha</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Deal_Category__c</fullName>
        <description>Category 1 - No Customization (&lt; 100 Desks)
Category 2 - Minor Customization (All Sizes) or No Customization (&gt;100 Desks)
Category 3 - Fully Custom Project</description>
        <inlineHelpText>Category 1 - No Customization (&lt; 100 Desks)
Category 2 - Minor Customization (All Sizes) or No Customization (&gt;100 Desks)
Category 3 - Fully Custom Project</inlineHelpText>
        <label>Deal Category</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Category 1</fullName>
                </value>
                <value>
                    <fullName>Category 2</fullName>
                </value>
                <value>
                    <fullName>Category 3</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Deal_Escalation__c</fullName>
        <label>Deal Escalation</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Deal_RSF__c</fullName>
        <label>Deal RSF</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Deal_USF__c</fullName>
        <label>Deal USF</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Description_of_Space__c</fullName>
        <inlineHelpText>Please provide any specifics provided for the space. For example, internal stairways, outdoor patio, etc.</inlineHelpText>
        <label>Description of Space</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Desired_Premises__c</fullName>
        <label>Desired Premises</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>First_Opt_Out_Commitment_Term_in_months__c</fullName>
        <label>First Opt Out Commit. Term (in months)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Form__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Linked to Youreka form that created the Case</description>
        <label>Form</label>
        <referenceTo>disco__Form__c</referenceTo>
        <relationshipLabel>Cases</relationshipLabel>
        <relationshipName>Cases</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Forms__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Forms</label>
        <referenceTo>disco__Form__c</referenceTo>
        <relationshipLabel>Cases (Forms)</relationshipLabel>
        <relationshipName>Cases1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Guardrail_Deal_Margin__c</fullName>
        <label>Guardrail Deal Margin (%)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Incremental_Capex_Required_USD__c</fullName>
        <label>Incremental Capex Required (USD)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Intended_Use_Case__c</fullName>
        <label>Intended Use Case</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>HQ</fullName>
                </value>
                <value>
                    <fullName>Swing</fullName>
                </value>
                <value>
                    <fullName>Satellite</fullName>
                </value>
                <value>
                    <fullName>Showroom</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Layout_Request_Submitted__c</fullName>
        <label>Layout Request Submitted</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Monthly_Configured_Fee_USD__c</fullName>
        <label>Monthly Configuration Fee (USD)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Opex_Cost_Underwritten_per_RSF__c</fullName>
        <label>Opex Cost Underwritten per RSF (USD)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Opex_Service_Bundle__c</fullName>
        <label>Opex Service Bundle</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Classic</fullName>
                </value>
                <value>
                    <fullName>Lite</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Opportunity_Close_Date__c</fullName>
        <formula>Opportunity__r.CloseDate</formula>
        <label>Opportunity Close Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Opportunity_Committed_Revenue__c</fullName>
        <formula>Opportunity__r.Committed_Revenue__c</formula>
        <label>Opportunity Committed Revenue</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Opportunity_Desks_Unweighted__c</fullName>
        <formula>Opportunity__r.No_of_Desks_unweighted__c</formula>
        <label>Opportunity Desks Unweighted</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Opportunity_Market__c</fullName>
        <formula>Opportunity__r.Territory__c</formula>
        <label>Opportunity Market</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Opportunity_Owner_Email__c</fullName>
        <description>For REA cases, displays Opportunity Owner email for email alerts</description>
        <label>Opportunity Owner Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Opportunity_Owner__c</fullName>
        <formula>IF(NOT(ISNULL(Opportunity__c)), Opportunity__r.Owner.Id, "")</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Opportunity Owner</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Opportunity_Product_Group__c</fullName>
        <formula>Opportunity__r.Product_Group__c</formula>
        <label>Opportunity Product Group</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Opportunity_RecordType_Developer_Name__c</fullName>
        <formula>Opportunity__r.RecordType.DeveloperName</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Opportunity RecordType Developer Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Opportunity_RecordType__c</fullName>
        <formula>IF(NOT(ISNULL(Opportunity__c)), Opportunity__r.RecordTypeId, "")</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Opportunity RecordType</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Opportunity_Stage__c</fullName>
        <formula>TEXT(Opportunity__r.StageName)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Opportunity Stage</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Opportunity_URL__c</fullName>
        <formula>HYPERLINK("https://wework.lightning.force.com/lightning/r/Opportunity/" + Opportunity__c + "/view","Opportunity Link")</formula>
        <label>Opportunity URL</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Opportunity__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Opportunity to which this case is directly related to if any.</description>
        <label>Opportunity</label>
        <referenceTo>Opportunity</referenceTo>
        <relationshipLabel>Opportunity Cases</relationshipLabel>
        <relationshipName>Opportunity_Cases</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Opt_Out_Clause__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Option to Terminate</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Other_Product__c</fullName>
        <label>Other Product</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Pricing_Strategy__c</fullName>
        <description>This will contains the pricing strategy picklist values</description>
        <label>Pricing Strategy</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Transparent</fullName>
                </value>
                <value>
                    <fullName>Blackbox</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Product_Offering__c</fullName>
        <label>Product Offering</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Standard WW</fullName>
                </value>
                <value>
                    <fullName>Custom WW</fullName>
                </value>
                <value>
                    <fullName>PxWe</fullName>
                </value>
                <value>
                    <fullName>Interim Monetization / Leaseback</fullName>
                </value>
                <value>
                    <fullName>Other Please Specify</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>REA_Region__c</fullName>
        <description>When opening REA Cases, user selects the region they need REA's assistance in. This is set by process: Case: Update Real Estate Form Submission</description>
        <label>REA Region</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>APAC</fullName>
                </value>
                <value>
                    <fullName>EMEA</fullName>
                </value>
                <value>
                    <fullName>LatAm</fullName>
                </value>
                <value>
                    <fullName>NA East</fullName>
                </value>
                <value>
                    <fullName>NA West</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>REA_Support_1__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>REA Support 1</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Cases1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>REA_Support_2__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>REA Support 2</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Cases2</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>REA_Support_3__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>REA Support 3</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Cases3</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Record_Type_Name__c</fullName>
        <description>Name of Record Type</description>
        <formula>CASE( RecordType.Name, "Enterprise Finance &amp; Strategy", "Real Estate Advisory","REA","REA","Sales Rep")</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Record Type Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Request_Type_Detail__c</fullName>
        <description>If a User chooses "request Type' = Other, this will be required</description>
        <label>Request Type Detail</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Requested_By__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>User who requested REA Case</description>
        <label>Requested By</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Cases</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Requested_Due_Date__c</fullName>
        <description>This will be requested due date of the case</description>
        <inlineHelpText>This will be requested due date of the case</inlineHelpText>
        <label>Requested Due Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Requested_Type__c</fullName>
        <label>Request Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Pricing</fullName>
                </value>
                <value>
                    <fullName>Proposal</fullName>
                </value>
                <value>
                    <fullName>Proposal &amp; Pricing</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Target_Guardrail_Margin__c</fullName>
        <label>Target Guardrail Margin (%)</label>
        <precision>18</precision>
        <scale>1</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Term_Sheet_Signed__c</fullName>
        <label>Term Sheet Signed?</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>No</fullName>
                </value>
                <value>
                    <fullName>Yes</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Total_Contract_Value__c</fullName>
        <label>TCV Excluding Configuration Fee (USD)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Total_Proposed_Price_Monthly__c</fullName>
        <description>Monthly, Local Currency</description>
        <inlineHelpText>Monthly, Local Currency</inlineHelpText>
        <label>Total Proposed Price (Monthly)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Total_Retail_Price_Monthly__c</fullName>
        <description>Monthly, Local Currency</description>
        <inlineHelpText>Monthly, Local Currency</inlineHelpText>
        <label>Total Retail Price (Monthly)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>User_Profile__c</fullName>
        <formula>CASE( RecordType.Name,"Enterprise Finance &amp; Strategy", "Real Estate Advisory", "REA", "Real Estate Advisory", "WeWork System Administrator")</formula>
        <label>User Profile</label>
        <type>Text</type>
    </fields>
    <sharingModel>Private</sharingModel>
    <listViews>
        <fullName>AllOpenCases</fullName>
        <columns>CASES.SUBJECT</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>CASES.STATUS</columns>
        <columns>Requested_Type__c</columns>
        <columns>CREATEDBY_USER.ALIAS</columns>
        <columns>CASES.PRIORITY</columns>
        <columns>CASES.CREATED_DATE</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>Opportunity__c</columns>
        <columns>Deal_Category__c</columns>
        <columns>Form__c</columns>
        <columns>CASES.CASE_NUMBER</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CASES.CLOSED</field>
            <operation>equals</operation>
            <value>0</value>
        </filters>
        <label>All Open Cases</label>
    </listViews>
    <listViews>
        <fullName>All_Open_REA_Cases</fullName>
        <columns>CASES.CASE_NUMBER</columns>
        <columns>OWNER_NAME</columns>
        <columns>CASES.SUBJECT</columns>
        <columns>CASES.STATUS</columns>
        <columns>CASES.CREATED_DATE_DATE_ONLY</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CASES.STATUS</field>
            <operation>notEqual</operation>
            <value>On Hold,Closed,Closed Lost</value>
        </filters>
        <filters>
            <field>Record_Type_Name__c</field>
            <operation>equals</operation>
            <value>REA</value>
        </filters>
        <label>REA - All Open Cases</label>
    </listViews>
    <listViews>
        <fullName>All_REA_Cases</fullName>
        <columns>CASES.CASE_NUMBER</columns>
        <columns>OWNER_NAME</columns>
        <columns>CASES.SUBJECT</columns>
        <columns>CASES.STATUS</columns>
        <columns>CASES.CREATED_DATE_DATE_ONLY</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Record_Type_Name__c</field>
            <operation>equals</operation>
            <value>REA</value>
        </filters>
        <label>REA - All Cases</label>
    </listViews>
    <listViews>
        <fullName>MyCases</fullName>
        <columns>CASES.SUBJECT</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>CASES.STATUS</columns>
        <columns>Requested_Type__c</columns>
        <columns>CREATEDBY_USER.ALIAS</columns>
        <columns>CASES.PRIORITY</columns>
        <columns>CASES.CREATED_DATE</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>Opportunity__c</columns>
        <columns>Deal_Category__c</columns>
        <columns>Form__c</columns>
        <columns>CASES.CASE_NUMBER</columns>
        <filterScope>Mine</filterScope>
        <label>My Cases</label>
    </listViews>
    <listViews>
        <fullName>MyOpenCases</fullName>
        <columns>CASES.SUBJECT</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>CASES.STATUS</columns>
        <columns>Requested_Type__c</columns>
        <columns>CREATEDBY_USER.ALIAS</columns>
        <columns>CASES.PRIORITY</columns>
        <columns>CASES.CREATED_DATE</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>Opportunity__c</columns>
        <columns>Deal_Category__c</columns>
        <columns>Form__c</columns>
        <columns>CASES.CASE_NUMBER</columns>
        <filterScope>Mine</filterScope>
        <filters>
            <field>CASES.CLOSED</field>
            <operation>equals</operation>
            <value>0</value>
        </filters>
        <label>My Open Cases</label>
    </listViews>
    <listViews>
        <fullName>REA_APAC_Case</fullName>
        <columns>CASES.CASE_NUMBER</columns>
        <columns>OWNER_NAME</columns>
        <columns>CASES.SUBJECT</columns>
        <columns>CASES.STATUS</columns>
        <columns>CASES.CREATED_DATE_DATE_ONLY</columns>
        <filterScope>Queue</filterScope>
        <label>REA - APAC</label>
        <queue>REA_APAC</queue>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>REA_EMEA_Case</fullName>
        <columns>CASES.CASE_NUMBER</columns>
        <columns>OWNER_NAME</columns>
        <columns>CASES.SUBJECT</columns>
        <columns>CASES.STATUS</columns>
        <columns>CASES.CREATED_DATE_DATE_ONLY</columns>
        <filterScope>Queue</filterScope>
        <label>REA - EMEA</label>
        <queue>REA_EMEA</queue>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>REA_LATAM_Case</fullName>
        <columns>CASES.CASE_NUMBER</columns>
        <columns>OWNER_NAME</columns>
        <columns>CASES.SUBJECT</columns>
        <columns>CASES.STATUS</columns>
        <columns>CASES.CREATED_DATE_DATE_ONLY</columns>
        <filterScope>Queue</filterScope>
        <label>REA - LatAm</label>
        <queue>REA_LATAM</queue>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>REA_My_Cases</fullName>
        <columns>CASES.CASE_NUMBER</columns>
        <columns>OWNER_NAME</columns>
        <columns>CASES.SUBJECT</columns>
        <columns>CASES.STATUS</columns>
        <columns>CASES.CREATED_DATE_DATE_ONLY</columns>
        <filterScope>Mine</filterScope>
        <filters>
            <field>Record_Type_Name__c</field>
            <operation>equals</operation>
            <value>REA</value>
        </filters>
        <label>REA - My Cases</label>
    </listViews>
    <listViews>
        <fullName>REA_NA_East_Case</fullName>
        <columns>CASES.CASE_NUMBER</columns>
        <columns>OWNER_NAME</columns>
        <columns>CASES.SUBJECT</columns>
        <columns>CASES.STATUS</columns>
        <columns>CASES.CREATED_DATE_DATE_ONLY</columns>
        <filterScope>Queue</filterScope>
        <label>REA - NA East</label>
        <queue>REA_NA_East</queue>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>REA_NA_West_Case</fullName>
        <columns>CASES.CASE_NUMBER</columns>
        <columns>OWNER_NAME</columns>
        <columns>CASES.SUBJECT</columns>
        <columns>CASES.STATUS</columns>
        <columns>CASES.CREATED_DATE_DATE_ONLY</columns>
        <filterScope>Queue</filterScope>
        <label>REA - NA West</label>
        <queue>REA_NA_West</queue>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>REA_Unassigned_Case</fullName>
        <columns>CASES.CASE_NUMBER</columns>
        <columns>OWNER_NAME</columns>
        <columns>CASES.SUBJECT</columns>
        <columns>CASES.STATUS</columns>
        <columns>CASES.CREATED_DATE_DATE_ONLY</columns>
        <filterScope>Queue</filterScope>
        <label>REA - Ops</label>
        <queue>REA_Unassigned</queue>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Real_Estate_Advisory_Closed_Cases</fullName>
        <columns>CASES.SUBJECT</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>CASES.STATUS</columns>
        <columns>Requested_Type__c</columns>
        <columns>CREATEDBY_USER.ALIAS</columns>
        <columns>CASES.PRIORITY</columns>
        <columns>CASES.CREATED_DATE</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>Opportunity__c</columns>
        <columns>Deal_Category__c</columns>
        <columns>Form__c</columns>
        <columns>CASES.CASE_NUMBER</columns>
        <filterScope>Queue</filterScope>
        <filters>
            <field>CASES.STATUS</field>
            <operation>equals</operation>
            <value>Closed</value>
        </filters>
        <filters>
            <field>Opportunity_Owner__c</field>
            <operation>equals</operation>
            <value>RealEstateAdvisoryQueue</value>
        </filters>
        <label>Real Estate Advisory Closed Cases</label>
        <queue>RealEstateAdvisoryQueue</queue>
        <sharedTo>
            <group>Real_Estate_Advisory_Queue</group>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Real_Estate_Advisory_Open_Cases</fullName>
        <columns>CASES.SUBJECT</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>CASES.STATUS</columns>
        <columns>Requested_Type__c</columns>
        <columns>CREATEDBY_USER.ALIAS</columns>
        <columns>CASES.PRIORITY</columns>
        <columns>CASES.CREATED_DATE</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>Opportunity__c</columns>
        <columns>Deal_Category__c</columns>
        <columns>Form__c</columns>
        <columns>CASES.CASE_NUMBER</columns>
        <filterScope>Queue</filterScope>
        <filters>
            <field>CASES.STATUS</field>
            <operation>notEqual</operation>
            <value>Closed</value>
        </filters>
        <filters>
            <field>Opportunity_Owner__c</field>
            <operation>equals</operation>
            <value>RealEstateAdvisoryQueue</value>
        </filters>
        <label>Real Estate Advisory Open Cases</label>
        <queue>RealEstateAdvisoryQueue</queue>
        <sharedTo>
            <group>Real_Estate_Advisory_Queue</group>
        </sharedTo>
    </listViews>
</CustomObject>